# CapstoneLoanApproval

./: .env.example  .gitignore  BEDROCK_SETUP.md  COMPLETION_CHECKLIST.md  DATABASE_UPDATES.txt  DETAILED_SCORING_BREAKDOWN.md  EVALUATION_INDEX.md  EVALUATION_REPORT.md  EVALUATION_REPORT_Sudhakarreddy_Tangirala.md  EVALUATION_SUMMARY.txt  GEN AI CASE STUDY LOAN APPROVAL SYSTEM EVALUATOR PROMPT.md  IMPLEMENTATION_GUIDE.md  QUICKSTART.md  README.md  RECOMMENDATIONS_FOR_ENHANCEMENT.md  STREAMLIT_UPDATES.md  UPDATES_SUMMARY.md  api_server.py  dashboard.py  loan_approval.db.backup  main.py  pyproject.toml  requirements.txt
app/: __init__.py
app/agents/: __init__.py  application_profile_agent.py  base_agent.py  compliance_agent.py  financial_risk_agent.py  loan_decision_agent.py
app/api/: app.py
app/api/routes/: applications.py
app/database/: __init__.py  case_manager.py  db.py  migrations.py  models.py
app/models/: __init__.py  agent_state.py  schemas.py
app/orchestration/: __init__.py  workflow.py
app/ui/: app.py
docs/: AGENTS.md  API.md  DECISION_MANAGEMENT.md  QUICK_START_DECISIONS.md
scripts/: sample_decisions.py
tests/: test_agents.py  test_case_manager.py
