[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CapstoneLoanApproval"
version = "0.1.0"
description = "AI-driven loan approval automation system using Claude and LangGraph"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Capstone Team", email = "team@example.com"}
]

dependencies = [
    "streamlit>=1.35.0",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "langgraph>=0.0.66",
    "langchain>=0.1.0",
    "anthropic>=0.25.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.23",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.1",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/TSudhakarReddy-tech/CapstoneLoanApproval"
Repository = "https://github.com/TSudhakarReddy-tech/CapstoneLoanApproval.git"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = ["**/*.py"]
